color match selected tab to google form

--- a/assets/tabs.css
+++ b/assets/tabs.css
@@ -28,5 +28,5 @@
     box-shadow: 1px 1px 0px white;
     border-left: 2px solid lightgrey !important;
     border-right: 2px solid lightgrey !important;
-    border-top: 4px solid #e36209 !important;
+    border-top: 4px solid #009688 !important;
 }
